feature/iss-correcoes-mensagens

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,35 +24,35 @@ MN00020 =
 # --
 # =====================================================================================================================
 # --
-MNE00001 = Ocorreu um erro ao processar as informações.
-MNE00002 = Campos obrigatórios não preenchidos.
-MNE00003 = O Nome do Sistema é obrigatório.
-MNE00004 = A Identificação do Serviço é obrigatória.
-MNE00005 = O Identificador da Unidade é obrigatório.
-MNE00006 = O Procedimento é obrigatório.
-MNE00007 = O Identificador do Tipo de Processo é obrigatório.
-MNE00008 = O Número do Processo é obrigatório.
-MNE00009 = A Sigla da Unidade é obrigatória.
-MNE00010 = O Nivel de Acesso é obrigatório.
+MNE00001 = Ocorreu um erro ao processar as informaÃ§Ãµes.
+MNE00002 = Campos obrigatÃ³rios nÃ£o preenchidos.
+MNE00003 = O Nome do Sistema Ã© obrigatÃ³rio.
+MNE00004 = A IdentificaÃ§Ã£o do ServiÃ§o Ã© obrigatÃ³ria.
+MNE00005 = O Identificador da Unidade Ã© obrigatÃ³rio.
+MNE00006 = O Procedimento Ã© obrigatÃ³rio.
+MNE00007 = O Identificador do Tipo de Processo Ã© obrigatÃ³rio.
+MNE00008 = O NÃºmero do Processo Ã© obrigatÃ³rio.
+MNE00009 = A Sigla da Unidade Ã© obrigatÃ³ria.
+MNE00010 = O NÃ­vel de Acesso Ã© obrigatÃ³rio.
 MNE00011 = 
-MNE00012 = O Documento é obrigatório.
-MNE00013 = O Tipo do Documento é obrigatório.
-MNE00014 = O Identificador do Tipo de Documento é obrigatório.
-MNE00015 = Informe pelo menos o Identificador ou Número do Processo para a inclusão.
-MNE00016 = O Conteúdo do arquivo é obrigatório.
+MNE00012 = O Documento Ã© obrigatÃ³rio.
+MNE00013 = O Tipo do Documento Ã© obrigatÃ³rio.
+MNE00014 = O Identificador do Tipo de Documento Ã© obrigatÃ³rio.
+MNE00015 = Informe pelo menos o Identificador ou NÃºmero do Processo para a inclusÃ£o.
+MNE00016 = O Conteï¿½do do arquivo Ã© obrigatÃ³rio.
 MNE00017 = 
 MNE00018 = 
-MNE00019 = Não existe nenhum registro para a consulta específica.
+MNE00019 = NÃ£o existe nenhum registro para a consulta especÃ­fica.
 MNE00020 = Informe pelo menos um registro para a consulta.
 MNE00021 = 
 MNE00022 = 
 MNE00023 = Informe pelo menos uma Unidade de Destino.
-MNE00024 = O Sistema somente aceitará requisições com um dos atributos preenchidos: Conteudo ou ConteudoMTOM.
-MNE00025 = O ConteudoMTOM somente poderá ser utilizado para documentos externos.
+MNE00024 = O Sistema somente aceitarÃ¡ requisiÃ§Ãµes com um dos atributos preenchidos: ConteÃºdo ou ConteudoMTOM.
+MNE00025 = O ConteudoMTOM somente poderÃ¡ ser utilizado para documentos externos.
 MNE00026 = Falha na montagem da Data.
-MNE00027 = A Data do documento é obrigatória.
-MNE00028 = O Remetente é obrigatório para documentos externos.
-MNE00029 = O Nome do arquivo é obrigatório.
-MNE00030 = A extensão do arquivo é obrigatório.
-MNE00031 = O arquivo selecionado não e permitido. Somente são permitidos arquivos com as extensões: {0}.
+MNE00027 = A Data do documento Ã© obrigatÃ³ria.
+MNE00028 = O Remetente Ã© obrigatÃ³rio para documentos externos.
+MNE00029 = O Nome do arquivo Ã© obrigatÃ³rio.
+MNE00030 = A extensÃ£o do arquivo Ã© obrigatÃ³rio.
+MNE00031 = O arquivo selecionado nÃ£o e permitido. Somente sÃ£o permitidos arquivos com as extensÃµes: {0}.
 # --
